Modified project information

--- a/junithelper/about.html
+++ b/junithelper/about.html
@@ -13,13 +13,13 @@
 <h3>JUnit Helper</h3>
 
 <p><a href="http://junithelper.org/">JUnit Helper</a> is an Eclipse plugin development project for the <a href="http://junit.org/">JUnit</a> testing.</p>
-<p>JUnit Helper make your unit testing more agile!</p>
+<p>"JUnit Helper" is a project to reduce frustrations of Java unit-testing on Eclipse IDE by getting off the routine works when making test cases.</p>
 
 <h3>Commiters</h3>
 
 <p>Kazuhiro Sera / seratch__at__gmail.com</a><p>
 
-<p>Copyright (c) 2009 - junithelper.org. All rights reserved.</p>
+<p>Copyright (c) 2009, 2010 JUnit Helper project committers and others.  All rights reserved.</p>
 
 </body>
 </html>
