--- a/junithelper/releasenotes.html
+++ b/junithelper/releasenotes.html
@@ -10,7 +10,7 @@
 
 <h3>JUnit Helper 0.4.0</h3>
 Date : 09 September 2010<br/>
-Tag  : <a href="http://code.google.com/p/junithelper/source/browse/#svn/tags/junithelper/0.4.0">http://https://junithelper.googlecode.com/svn/tags/junithelper/0.4.0</a><br/>
+Tag  : <a href="http://code.google.com/p/junithelper/source/browse/#svn/tags/junithelper/0.4.0">http://junithelper.googlecode.com/svn/tags/junithelper/0.4.0</a><br/>
 <ul> 
 <li>Remove duplicated import when generating a test case (<a href="http://code.google.com/p/junithelper/source/browse/?r=170">r170</a>)</li>
 <li>Support Japanese (<a href="http://code.google.com/p/junithelper/source/browse/?r=172">r172</a>)</li>
