--- a/junithelper/releasenotes.html
+++ b/junithelper/releasenotes.html
@@ -8,6 +8,13 @@
 
 <h2>JUnit Helper Release Notes</h2>
 
+<h3>JUnit Helper 0.4.1</h3>
+Date : 09 September 2010<br/>
+Tag  : <a href="http://code.google.com/p/junithelper/source/browse/#svn/tags/junithelper/0.4.1">http://junithelper.googlecode.com/svn/tags/junithelper/0.4.1</a><br/>
+<ul>
+<li>Resolved the build trouble of version 0.4.0 (<a href="http://code.google.com/p/junithelper/source/browse/?r=180">r180</a>)</li>
+</ul>
+
 <h3>JUnit Helper 0.4.0</h3>
 Date : 09 September 2010<br/>
 Tag  : <a href="http://code.google.com/p/junithelper/source/browse/#svn/tags/junithelper/0.4.0">http://junithelper.googlecode.com/svn/tags/junithelper/0.4.0</a><br/>
