--- a/junithelper/releasenotes.html
+++ b/junithelper/releasenotes.html
@@ -8,6 +8,13 @@
 
 <h2>JUnit Helper Release Notes</h2>
 
+<h3>JUnit Helper 0.4.2</h3>
+Date : 17 October 2010<br/>
+Tag  : <a href="http://code.google.com/p/junithelper/source/browse/#svn/tags/junithelper/0.4.2">http://junithelper.googlecode.com/svn/tags/junithelper/0.4.2</a><br/>
+<ul>
+<li>Fixed <a href="http://code.google.com/p/junithelper/issues/detail?id=38&can=1">Issue 38</a></li>
+</ul>
+
 <h3>JUnit Helper 0.4.1</h3>
 Date : 09 September 2010<br/>
 Tag  : <a href="http://code.google.com/p/junithelper/source/browse/#svn/tags/junithelper/0.4.1">http://junithelper.googlecode.com/svn/tags/junithelper/0.4.1</a><br/>
