--- a/junithelper/releasenotes.html
+++ b/junithelper/releasenotes.html
@@ -8,6 +8,14 @@
 
 <h2>JUnit Helper Release Notes</h2>
 
+<h3>JUnit Helper 0.4.3</h3>
+Date : 24 October 2010<br/>
+Tag  : <a href="http://code.google.com/p/junithelper/source/browse/#svn/tags/junithelper/0.4.3">http://junithelper.googlecode.com/svn/tags/junithelper/0.4.3</a><br/>
+<ul>
+<li>Fixed <a href="http://code.google.com/p/junithelper/issues/detail?id=39&can=1">Issue 39</a></li>
+<li>Fixed <a href="http://code.google.com/p/junithelper/issues/detail?id=40&can=1">Issue 40</a></li>
+</ul>
+
 <h3>JUnit Helper 0.4.2</h3>
 Date : 17 October 2010<br/>
 Tag  : <a href="http://code.google.com/p/junithelper/source/browse/#svn/tags/junithelper/0.4.2">http://junithelper.googlecode.com/svn/tags/junithelper/0.4.2</a><br/>
