--- a/junithelper-plugin/releasenotes.html
+++ b/junithelper-plugin/releasenotes.html
@@ -8,41 +8,48 @@
 
 <h2>JUnit Helper Release Notes</h2>
 
+<h3>JUnit Helper 0.9.1</h3>
+Date : 28 November 2010<br/>
+Tag  : <a href="http://code.google.com/p/junithelper-plugin/source/browse/#svn/tags/junithelper-plugin/0.4.4">http://junithelper.googlecode.com/svn/tags/junithelper-plugin/0.9.1</a><br/>
+<ul>
+<li>Refactored internal modules as junithelper-core</li>
+</ul>
+
 <h3>JUnit Helper 0.4.4</h3>
 Date : 8 November 2010<br/>
-Tag  : <a href="http://code.google.com/p/junithelper/source/browse/#svn/tags/junithelper/0.4.4">http://junithelper.googlecode.com/svn/tags/junithelper/0.4.4</a><br/>
+Tag  : <a href="http://code.google.com/p/junithelper-plugin/source/browse/#svn/tags/junithelper-plugin/0.4.4">http://junithelper.googlecode.com/svn/tags/junithelper-plugin/0.4.4</a><br/>
 <ul>
-<li>Fixed <a href="http://code.google.com/p/junithelper/issues/detail?id=41&can=1">Issue 41</a></li>
+<li>Fixed <a href="http://code.google.com/p/junithelper-plugin/issues/detail?id=41&can=1">Issue 41</a></li>
 </ul>
 
 <h3>JUnit Helper 0.4.3</h3>
 Date : 24 October 2010<br/>
-Tag  : <a href="http://code.google.com/p/junithelper/source/browse/#svn/tags/junithelper/0.4.3">http://junithelper.googlecode.com/svn/tags/junithelper/0.4.3</a><br/>
+Tag  : <a href="http://code.google.com/p/junithelper-plugin/source/browse/#svn/tags/junithelper-plugin/0.4.3">http://junithelper.googlecode.com/svn/tags/junithelper-plugin/0.4.3</a><br/>
 <ul>
-<li>Fixed <a href="http://code.google.com/p/junithelper/issues/detail?id=39&can=1">Issue 39</a></li>
-<li>Fixed <a href="http://code.google.com/p/junithelper/issues/detail?id=40&can=1">Issue 40</a></li>
+<li>Fixed <a href="http://code.google.com/p/junithelper-plugin/issues/detail?id=39&can=1">Issue 39</a></li>
+<li>Fixed <a href="http://code.google.com/p/junithelper-plugin/issues/detail?id=40&can=1">Issue 40</a></li>
 </ul>
 
 <h3>JUnit Helper 0.4.2</h3>
 Date : 17 October 2010<br/>
-Tag  : <a href="http://code.google.com/p/junithelper/source/browse/#svn/tags/junithelper/0.4.2">http://junithelper.googlecode.com/svn/tags/junithelper/0.4.2</a><br/>
+Tag  : <a href="http://code.google.com/p/junithelper-plugin/source/browse/#svn/tags/junithelper-plugin/0.4.2">http://junithelper.googlecode.com/svn/tags/junithelper-plugin/0.4.2</a><br/>
 <ul>
-<li>Fixed <a href="http://code.google.com/p/junithelper/issues/detail?id=38&can=1">Issue 38</a></li>
+<li>Fixed <a href="http://code.google.com/p/junithelper-plugin/issues/detail?id=38&can=1">Issue 38</a></li>
 </ul>
 
 <h3>JUnit Helper 0.4.1</h3>
 Date : 09 September 2010<br/>
-Tag  : <a href="http://code.google.com/p/junithelper/source/browse/#svn/tags/junithelper/0.4.1">http://junithelper.googlecode.com/svn/tags/junithelper/0.4.1</a><br/>
+Tag  : <a href="http://code.google.com/p/junithelper-plugin/source/browse/#svn/tags/junithelper-plugin/0.4.1">http://junithelper.googlecode.com/svn/tags/junithelper-plugin/0.4.1</a><br/>
 <ul>
-<li>Resolved the build trouble of version 0.4.0 (<a href="http://code.google.com/p/junithelper/source/browse/?r=180">r180</a>)</li>
+<li>Resolved the build trouble of version 0.4.0 (<a href="http://code.google.com/p/junithelper-plugin/source/browse/?r=180">r180</a>)</li>
 </ul>
 
 <h3>JUnit Helper 0.4.0</h3>
 Date : 09 September 2010<br/>
-Tag  : <a href="http://code.google.com/p/junithelper/source/browse/#svn/tags/junithelper/0.4.0">http://junithelper.googlecode.com/svn/tags/junithelper/0.4.0</a><br/>
+Tag  : <a href="http://code.google.com/p/junithelper-plugin/source/browse/#svn/tags/junithelper-plugin/0.4.0">http://junithelper.googlecode.com/svn/tags/junithelper-plugin/0.4.0</a><br/>
 <ul> 
-<li>Remove duplicated import when generating a test case (<a href="http://code.google.com/p/junithelper/source/browse/?r=170">r170</a>)</li>
-<li>Support Japanese (<a href="http://code.google.com/p/junithelper/source/browse/?r=172">r172</a>)</li>
+<li>Remove duplicated import when generating a test case (<a href="http://code.google.com/p/junithelper-plugin/source/browse/?r=170">r170</a>)</li>
+<li>Support Japanese (<a href="http://code.google.com/p/junithelper-plugin/source/browse/?r=172">r172</a>)</li>
 </ul>
 
 <p>Copyright (c) 2009 - JUnit Helper project committers and others. All rights reserved.</p>
