--- a/junithelper-plugin/about.html
+++ b/junithelper-plugin/about.html
@@ -7,16 +7,13 @@
 <body>
 
 <h2>About This Content</h2>
- 
-<p>25th September, 2009</p>	
+ <p>25th September, 2009</p>	
 
-<h3>JUnit Helper</h3>
-
-<p><a href="http://junithelper.org/">JUnit Helper</a> is an Eclipse plugin development project for the <a href="http://junit.org/">JUnit</a> testing.</p>
-<p>"JUnit Helper" is a project to reduce frustrations of Java unit-testing on Eclipse IDE by getting off the routine works when making test cases.</p>
+<h3>JUnit Helper Eclipse Plugin</h3>
+<p>"<a href="http://junithelper.org/">JUnit Helper</a>" is a product to support <a href="http://junit.org/">JUnit</a> testing which provides CUI interface and Eclipse plugin.</p>
+<p>It supports to cover all the tests for public, protected and package local methods by making it easier to start writing new test case.</p>
 
 <h3>Commiters</h3>
-
 <p>Kazuhiro Sera / seratch__at__gmail.com</a><p>
 
 <p>Copyright (c) 2009, 2010 JUnit Helper project committers and others.  All rights reserved.</p>
