junithelper-plugin 0.9.2 release

--- a/junithelper-plugin/about.html
+++ b/junithelper-plugin/about.html
@@ -11,7 +11,7 @@
 
 <h3>JUnit Helper Eclipse Plugin</h3>
 <p>"<a href="http://junithelper.org/">JUnit Helper</a>" is a product to support <a href="http://junit.org/">JUnit</a> testing which provides CUI interface and Eclipse plugin.</p>
-<p>It supports to cover all the tests for public, protected and package local methods by making it easier to start writing new test case.</p>
+<p>It supports to cover all the tests for public, protected and package local methods by making it easier to start writing new test cases.</p>
 
 <h3>Commiters</h3>
 <p>Kazuhiro Sera / seratch__at__gmail.com</a><p>
