--- a/junithelper-plugin/releasenotes.html
+++ b/junithelper-plugin/releasenotes.html
@@ -8,6 +8,13 @@
 
 <h2>JUnit Helper Release Notes</h2>
 
+<h3>JUnit Helper 0.9.2</h3>
+Date : 29 November 2010<br/>
+Tag  : <a href="http://code.google.com/p/junithelper-plugin/source/browse/#svn/tags/junithelper-plugin/0.9.2">http://junithelper.googlecode.com/svn/tags/junithelper-plugin/0.9.2</a><br/>
+<ul>
+<li>Some improvements</li>
+</ul>
+
 <h3>JUnit Helper 0.9.1</h3>
 Date : 28 November 2010<br/>
 Tag  : <a href="http://code.google.com/p/junithelper-plugin/source/browse/#svn/tags/junithelper-plugin/0.9.1">http://junithelper.googlecode.com/svn/tags/junithelper-plugin/0.9.1</a><br/>
