--- a/junithelper-plugin/releasenotes.html
+++ b/junithelper-plugin/releasenotes.html
@@ -1,18 +1,25 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
 <html>
 <head>
-<title>JUnit Helper Release Notes</title>
+<title>JUnit Helper Eclipse plugin Release Notes</title>
 <meta http-equiv=Content-Type content="text/html; charset=UTF-8">
 </head>
 <body>
 
-<h2>JUnit Helper Release Notes</h2>
+<h2>JUnit Helper Eclipse plugin Release Notes</h2>
+
+<h3>JUnit Helper 0.9.3</h3>
+Date : 1 December 2010<br/>
+Tag  : <a href="http://code.google.com/p/junithelper-plugin/source/browse/#svn/tags/junithelper-plugin/0.9.3">http://junithelper.googlecode.com/svn/tags/junithelper-plugin/0.9.2</a><br/>
+<ul>
+<li>Bugfix(gabled characters when opening test case)</li>
+</ul>
 
 <h3>JUnit Helper 0.9.2</h3>
-Date : 29 November 2010<br/>
+Date : 1 December 2010<br/>
 Tag  : <a href="http://code.google.com/p/junithelper-plugin/source/browse/#svn/tags/junithelper-plugin/0.9.2">http://junithelper.googlecode.com/svn/tags/junithelper-plugin/0.9.2</a><br/>
 <ul>
-<li>Some improvements</li>
+<li>a few bug fixes and internal improvements</li>
 </ul>
 
 <h3>JUnit Helper 0.9.1</h3>
