--- a/junithelper-plugin/releasenotes.html
+++ b/junithelper-plugin/releasenotes.html
@@ -8,9 +8,16 @@
 
 <h2>JUnit Helper Eclipse plugin Release Notes</h2>
 
+<h3>JUnit Helper 0.9.4</h3>
+Date : 9 December 2010<br/>
+Tag  : <a href="http://code.google.com/p/junithelper-plugin/source/browse/#svn/tags/junithelper-plugin/0.9.4">http://junithelper.googlecode.com/svn/tags/junithelper-plugin/0.9.4</a><br/>
+<ul>
+<li>Fixed <a href="http://code.google.com/p/junithelper-plugin/issues/detail?id=43&can=1">Issue 43</a></li>
+</ul>
+
 <h3>JUnit Helper 0.9.3</h3>
 Date : 1 December 2010<br/>
-Tag  : <a href="http://code.google.com/p/junithelper-plugin/source/browse/#svn/tags/junithelper-plugin/0.9.3">http://junithelper.googlecode.com/svn/tags/junithelper-plugin/0.9.2</a><br/>
+Tag  : <a href="http://code.google.com/p/junithelper-plugin/source/browse/#svn/tags/junithelper-plugin/0.9.3">http://junithelper.googlecode.com/svn/tags/junithelper-plugin/0.9.3</a><br/>
 <ul>
 <li>Bugfix(gabled characters when opening test case)</li>
 </ul>
