[Eclipse-plugin] Release 1.0.0

--- a/junithelper-eclipse-plugin/releasenotes.html
+++ b/junithelper-eclipse-plugin/releasenotes.html
@@ -8,69 +8,86 @@
 
 <h2>JUnit Helper Eclipse plugin Release Notes</h2>
 
+<h3>JUnit Helper 1.0.0</h3>
+Date : 29 December 2010<br/>
+Tag  : <a href="http://code.google.com/p/junithelper/source/browse/#svn/tags/junithelper-eclipse-plugin/1.0.0">http://junithelper.googlecode.com/svn/tags/junithelper-eclipse-plugin/1.0.0</a><br/>
+<ul>
+<li>Fixed <a href="http://code.google.com/p/junithelper/issues/detail?id=44&can=1">Issue 44</a> : Supporting args with nested generics in generating template test code</li>
+<li>Fixed <a href="http://code.google.com/p/junithelper/issues/detail?id=45&can=1">Issue 45</a> : Supporting return type with nested generics in generating template test code</li>
+<li>Fixed <a href="http://code.google.com/p/junithelper/issues/detail?id=46&can=1">Issue 46</a> : Compile error at generated template test code when "[]" exists after variable name</li>
+<li>Fixed <a href="http://code.google.com/p/junithelper/issues/detail?id=47&can=1">Issue 47</a> : Supporting array of array in generating template test code</li>
+<li>Fixed <a href="http://code.google.com/p/junithelper/issues/detail?id=48&can=1">Issue 48</a> : Compile error forduplicated variable names</li>
+<li>Fixed <a href="http://code.google.com/p/junithelper/issues/detail?id=49&can=1">Issue 49</a> : Compile error if test target method throws Throwable</li>
+<li>Fixed <a href="http://code.google.com/p/junithelper/issues/detail?id=50&can=1">Issue 50</a> : Compile error at instantiation test method for enum</li>
+<li>Fixed <a href="http://code.google.com/p/junithelper/issues/detail?id=51&can=1">Issue 51</a> : Compile error when test target class is defined with generic class literal</li>
+<li>Fixed <a href="http://code.google.com/p/junithelper/issues/detail?id=52&can=1">Issue 52</a> : Invalid test methods are created when using anonymous inner class</li>
+<li>Fixed <a href="http://code.google.com/p/junithelper/issues/detail?id=53&can=1">Issue 53</a> : Compile error when using inner classes of test target class</li>
+<li>Fixed <a href="http://code.google.com/p/junithelper/issues/detail?id=54&can=1">Issue 54</a> : Invalid test methods are created when methods in enum</li>
+</ul>
+
 <h3>JUnit Helper 0.9.4</h3>
 Date : 9 December 2010<br/>
-Tag  : <a href="http://code.google.com/p/junithelper-plugin/source/browse/#svn/tags/junithelper-plugin/0.9.4">http://junithelper.googlecode.com/svn/tags/junithelper-plugin/0.9.4</a><br/>
+Tag  : <a href="http://code.google.com/p/junithelper/source/browse/#svn/tags/junithelper-eclipse-plugin/0.9.4">http://junithelper.googlecode.com/svn/tags/junithelper-eclipse-plugin/0.9.4</a><br/>
 <ul>
-<li>Fixed <a href="http://code.google.com/p/junithelper-plugin/issues/detail?id=43&can=1">Issue 43</a></li>
+<li>Fixed <a href="http://code.google.com/p/junithelper/issues/detail?id=43&can=1">Issue 43</a></li>
 </ul>
 
 <h3>JUnit Helper 0.9.3</h3>
 Date : 1 December 2010<br/>
-Tag  : <a href="http://code.google.com/p/junithelper-plugin/source/browse/#svn/tags/junithelper-plugin/0.9.3">http://junithelper.googlecode.com/svn/tags/junithelper-plugin/0.9.3</a><br/>
+Tag  : <a href="http://code.google.com/p/junithelper/source/browse/#svn/tags/junithelper-eclipse-plugin/0.9.3">http://junithelper.googlecode.com/svn/tags/junithelper-eclipse-plugin/0.9.3</a><br/>
 <ul>
 <li>Bugfix(gabled characters when opening test case)</li>
 </ul>
 
 <h3>JUnit Helper 0.9.2</h3>
 Date : 1 December 2010<br/>
-Tag  : <a href="http://code.google.com/p/junithelper-plugin/source/browse/#svn/tags/junithelper-plugin/0.9.2">http://junithelper.googlecode.com/svn/tags/junithelper-plugin/0.9.2</a><br/>
+Tag  : <a href="http://code.google.com/p/junithelper/source/browse/#svn/tags/junithelper-eclipse-plugin/0.9.2">http://junithelper.googlecode.com/svn/tags/junithelper-eclipse-plugin/0.9.2</a><br/>
 <ul>
 <li>a few bug fixes and internal improvements</li>
 </ul>
 
 <h3>JUnit Helper 0.9.1</h3>
 Date : 28 November 2010<br/>
-Tag  : <a href="http://code.google.com/p/junithelper-plugin/source/browse/#svn/tags/junithelper-plugin/0.9.1">http://junithelper.googlecode.com/svn/tags/junithelper-plugin/0.9.1</a><br/>
+Tag  : <a href="http://code.google.com/p/junithelper/source/browse/#svn/tags/junithelper-eclipse-plugin/0.9.1">http://junithelper.googlecode.com/svn/tags/junithelper-eclipse-plugin/0.9.1</a><br/>
 <ul>
 <li>Refactored internal modules as junithelper-core</li>
 </ul>
 
 <h3>JUnit Helper 0.4.4</h3>
 Date : 8 November 2010<br/>
-Tag  : <a href="http://code.google.com/p/junithelper-plugin/source/browse/#svn/tags/junithelper-plugin/0.4.4">http://junithelper.googlecode.com/svn/tags/junithelper-plugin/0.4.4</a><br/>
+Tag  : <a href="http://code.google.com/p/junithelper/source/browse/#svn/tags/junithelper-eclipse-plugin/0.4.4">http://junithelper.googlecode.com/svn/tags/junithelper-eclipse-plugin/0.4.4</a><br/>
 <ul>
-<li>Fixed <a href="http://code.google.com/p/junithelper-plugin/issues/detail?id=41&can=1">Issue 41</a></li>
+<li>Fixed <a href="http://code.google.com/p/junithelper/issues/detail?id=41&can=1">Issue 41</a></li>
 </ul>
 
 <h3>JUnit Helper 0.4.3</h3>
 Date : 24 October 2010<br/>
-Tag  : <a href="http://code.google.com/p/junithelper-plugin/source/browse/#svn/tags/junithelper-plugin/0.4.3">http://junithelper.googlecode.com/svn/tags/junithelper-plugin/0.4.3</a><br/>
+Tag  : <a href="http://code.google.com/p/junithelper/source/browse/#svn/tags/junithelper-eclipse-plugin/0.4.3">http://junithelper.googlecode.com/svn/tags/junithelper-eclipse-plugin/0.4.3</a><br/>
 <ul>
-<li>Fixed <a href="http://code.google.com/p/junithelper-plugin/issues/detail?id=39&can=1">Issue 39</a></li>
-<li>Fixed <a href="http://code.google.com/p/junithelper-plugin/issues/detail?id=40&can=1">Issue 40</a></li>
+<li>Fixed <a href="http://code.google.com/p/junithelper/issues/detail?id=39&can=1">Issue 39</a></li>
+<li>Fixed <a href="http://code.google.com/p/junithelper/issues/detail?id=40&can=1">Issue 40</a></li>
 </ul>
 
 <h3>JUnit Helper 0.4.2</h3>
 Date : 17 October 2010<br/>
-Tag  : <a href="http://code.google.com/p/junithelper-plugin/source/browse/#svn/tags/junithelper-plugin/0.4.2">http://junithelper.googlecode.com/svn/tags/junithelper-plugin/0.4.2</a><br/>
+Tag  : <a href="http://code.google.com/p/junithelper/source/browse/#svn/tags/junithelper-eclipse-plugin/0.4.2">http://junithelper.googlecode.com/svn/tags/junithelper-eclipse-plugin/0.4.2</a><br/>
 <ul>
-<li>Fixed <a href="http://code.google.com/p/junithelper-plugin/issues/detail?id=38&can=1">Issue 38</a></li>
+<li>Fixed <a href="http://code.google.com/p/junithelper/issues/detail?id=38&can=1">Issue 38</a></li>
 </ul>
 
 <h3>JUnit Helper 0.4.1</h3>
 Date : 09 September 2010<br/>
-Tag  : <a href="http://code.google.com/p/junithelper-plugin/source/browse/#svn/tags/junithelper-plugin/0.4.1">http://junithelper.googlecode.com/svn/tags/junithelper-plugin/0.4.1</a><br/>
+Tag  : <a href="http://code.google.com/p/junithelper/source/browse/#svn/tags/junithelper-eclipse-plugin/0.4.1">http://junithelper.googlecode.com/svn/tags/junithelper-eclipse-plugin/0.4.1</a><br/>
 <ul>
-<li>Resolved the build trouble of version 0.4.0 (<a href="http://code.google.com/p/junithelper-plugin/source/browse/?r=180">r180</a>)</li>
+<li>Resolved the build trouble of version 0.4.0 (<a href="http://code.google.com/p/junithelper/source/browse/?r=180">r180</a>)</li>
 </ul>
 
 <h3>JUnit Helper 0.4.0</h3>
 Date : 09 September 2010<br/>
-Tag  : <a href="http://code.google.com/p/junithelper-plugin/source/browse/#svn/tags/junithelper-plugin/0.4.0">http://junithelper.googlecode.com/svn/tags/junithelper-plugin/0.4.0</a><br/>
+Tag  : <a href="http://code.google.com/p/junithelper/source/browse/#svn/tags/junithelper-eclipse-plugin/0.4.0">http://junithelper.googlecode.com/svn/tags/junithelper-eclipse-plugin/0.4.0</a><br/>
 <ul> 
-<li>Remove duplicated import when generating a test case (<a href="http://code.google.com/p/junithelper-plugin/source/browse/?r=170">r170</a>)</li>
-<li>Support Japanese (<a href="http://code.google.com/p/junithelper-plugin/source/browse/?r=172">r172</a>)</li>
+<li>Remove duplicated import when generating a test case (<a href="http://code.google.com/p/junithelper/source/browse/?r=170">r170</a>)</li>
+<li>Support Japanese (<a href="http://code.google.com/p/junithelper/source/browse/?r=172">r172</a>)</li>
 </ul>
 
 <p>Copyright (c) 2009 - JUnit Helper project committers and others. All rights reserved.</p>
