Updated about info

--- a/junithelper-eclipse-plugin/about.html
+++ b/junithelper-eclipse-plugin/about.html
@@ -10,13 +10,17 @@
  <p>25th September, 2009</p>	
 
 <h3>JUnit Helper Eclipse Plugin</h3>
-<p>"<a href="http://junithelper.org/">JUnit Helper</a>" is a product to support <a href="http://junit.org/">JUnit</a> testing which provides CUI interface and Eclipse plugin.</p>
-<p>It supports to cover all the tests for public, protected and package local methods by making it easier to start writing new test cases.</p>
+<p>
+"JUnit Helper" is an open-source project helping JUnit users to cover all tests for public, protected and package local methods by saving much labor to start writing new test cases.
+</p>
+<p>
+Eclipse plugin also has an advantage of making it easier to go back and forth between developing class and test class by "Alt + 8 "(test->dev) and "Alt + 9"(dev->test).
+</p>
 
 <h3>Commiters</h3>
 <p>Kazuhiro Sera / seratch__at__gmail.com</a><p>
 
-<p>Copyright (c) 2009, 2010 JUnit Helper project committers and others.  All rights reserved.</p>
+<p>Copyright (c) 2009-2011 JUnit Helper project committers and others.  All rights reserved.</p>
 
 </body>
 </html>
