--- a/junithelper-eclipse-plugin/releasenotes.html
+++ b/junithelper-eclipse-plugin/releasenotes.html
@@ -8,6 +8,11 @@
 
 <h2>JUnit Helper Eclipse plugin Release Notes</h2>
 
+<h3>JUnit Helper 1.0.2</h3>
+Date : 26 May 2011<br/>
+Tag  : <a href="http://code.google.com/p/junithelper/source/browse/#svn/tags/junithelper-eclipse-plugin/1.0.2">http://junithelper.googlecode.com/svn/tags/junithelper-eclipse-plugin/1.0.2</a><br/>
+<li>Enabled to add testing pattern comments(Arrange-Act-Assert/Given-When-Then) explicitly.</li>
+
 <h3>JUnit Helper 1.0.0</h3>
 Date : 29 December 2010<br/>
 Tag  : <a href="http://code.google.com/p/junithelper/source/browse/#svn/tags/junithelper-eclipse-plugin/1.0.0">http://junithelper.googlecode.com/svn/tags/junithelper-eclipse-plugin/1.0.0</a><br/>
