--- a/junithelper-eclipse-plugin/releasenotes.html
+++ b/junithelper-eclipse-plugin/releasenotes.html
@@ -8,9 +8,15 @@
 
 <h2>JUnit Helper Eclipse plugin Release Notes</h2>
 
+<h3>JUnit Helper 1.0.4</h3>
+Date : 15 June 2011<br/>
+Tag  : <a href="http://code.google.com/p/junithelper/source/browse/#svn/tags/junithelper-eclipse-plugin/1.0.4">http://junithelper.googlecode.com/svn/tags/junithelper-eclipse-plugin/1.0.4</a><br/>
+<li>Fixed <a href="http://code.google.com/p/junithelper/issues/detail?id=58&can=1">Issue 58</a> : Need to enable dropping specified pacakges or classes from test target</li>
+<li>Fixed <a href="http://code.google.com/p/junithelper/issues/detail?id=59&can=1">Issue 59</a> : "force4 command" removes super class even if it isn't a "junit.framework.TestCase"</li>
+
 <h3>JUnit Helper 1.0.3</h3>
 Date : 13 June 2011<br/>
-Tag  : <a href="http://code.google.com/p/junithelper/source/browse/#svn/tags/junithelper-eclipse-plugin/1.0.2">http://junithelper.googlecode.com/svn/tags/junithelper-eclipse-plugin/1.0.3</a><br/>
+Tag  : <a href="http://code.google.com/p/junithelper/source/browse/#svn/tags/junithelper-eclipse-plugin/1.0.3">http://junithelper.googlecode.com/svn/tags/junithelper-eclipse-plugin/1.0.3</a><br/>
 <li>Fixed <a href="http://code.google.com/p/junithelper/issues/detail?id=56&can=1">Issue 56</a> : Bug: Arg types are unrecognized when using wildcard import</li>
 <li>Fixed <a href="http://code.google.com/p/junithelper/issues/detail?id=57&can=1">Issue 57</a> : JUnit 4.x should use assertThat() style.</li>
 
