Updated release notes

--- a/junithelper-eclipse-plugin/releasenotes.html
+++ b/junithelper-eclipse-plugin/releasenotes.html
@@ -8,6 +8,13 @@
 
 <h2>JUnit Helper Eclipse plugin Release Notes</h2>
 
+<h3>JUnit Helper 1.6.0</h3>
+Date : 22 June 2011<br/>
+<li>Fixed <a href="http://code.google.com/p/junithelper/issues/detail?id=62&can=1">Issue 62</a>: Extensions to customize template generation(instantiation, arg patterns, assertions)</li>
+
+<h3>JUnit Helper 1.5.0</h3>
+Date : 17 June 2011<br/>
+
 <h3>JUnit Helper 1.0.4</h3>
 Date : 15 June 2011<br/>
 Tag  : <a href="http://code.google.com/p/junithelper/source/browse/#svn/tags/junithelper-eclipse-plugin/1.0.4">http://junithelper.googlecode.com/svn/tags/junithelper-eclipse-plugin/1.0.4</a><br/>
