eclipse-plugin 1.7.0 released

--- a/junithelper-eclipse-plugin/releasenotes.html
+++ b/junithelper-eclipse-plugin/releasenotes.html
@@ -8,6 +8,14 @@
 
 <h2>JUnit Helper Eclipse plugin Release Notes</h2>
 
+<h3>JUnit Helper 1.7.0</h3>
+Date : 13 July 2011<br/>
+<li>Fixed <a href="http://code.google.com/p/junithelper/issues/detail?id=63&can=1">Issue 63</a>: Unnecessary semicolon for comment area when using extension</li>
+<li>Fixed <a href="http://code.google.com/p/junithelper/issues/detail?id=64&can=1">Issue 64</a>: Cannot load the value of "target_regexpCsvForExclusion" with line breaks in pom.xml</li>
+<li>Fixed <a href="http://code.google.com/p/junithelper/issues/detail?id=65&can=1">Issue 65</a>: Generated invalid test code when "testCaseClassNameToExtend" is empty.</li>
+<li>Fixed <a href="http://code.google.com/p/junithelper/issues/detail?id=66&can=1">Issue 66</a>: Test code generator does not work fine for default package class.</li>
+<li>Fixed <a href="http://code.google.com/p/junithelper/issues/detail?id=68&can=1">Issue 68</a>: Extension for instantiation does not work fine for constructor args.</li>
+
 <h3>JUnit Helper 1.6.0</h3>
 Date : 22 June 2011<br/>
 <li>Fixed <a href="http://code.google.com/p/junithelper/issues/detail?id=62&can=1">Issue 62</a>: Extensions to customize template generation(instantiation, arg patterns, assertions)</li>
