eclipse-plugin 1.8 released

--- a/junithelper-eclipse-plugin/releasenotes.html
+++ b/junithelper-eclipse-plugin/releasenotes.html
@@ -8,6 +8,10 @@
 
 <h2>JUnit Helper Eclipse plugin Release Notes</h2>
 
+<h3>JUnit Helper 1.8.0</h3>
+Date : 21 July 2011<br/>
+<li>Fixed <a href="http://code.google.com/p/junithelper/issues/detail?id=69&can=1">Issue 69</a>: Extension: Missing semicolon for constructor args</li>
+
 <h3>JUnit Helper 1.7.0</h3>
 Date : 13 July 2011<br/>
 <li>Fixed <a href="http://code.google.com/p/junithelper/issues/detail?id=63&can=1">Issue 63</a>: Unnecessary semicolon for comment area when using extension</li>
