--- a/junithelper-eclipse-plugin/releasenotes.html
+++ b/junithelper-eclipse-plugin/releasenotes.html
@@ -8,6 +8,10 @@
 
 <h2>JUnit Helper Eclipse plugin Release Notes</h2>
 
+<h3>JUnit Helper 1.9.0</h3>
+Date : 21 July 2011<br/>
+<li>Fixed <a href="http://code.google.com/p/junithelper/issues/detail?id=70&can=1">Issue 70</a>: Extension: Missing semicolon when test target object is assigned by ext-instantiation definition</li>
+
 <h3>JUnit Helper 1.8.0</h3>
 Date : 21 July 2011<br/>
 <li>Fixed <a href="http://code.google.com/p/junithelper/issues/detail?id=69&can=1">Issue 69</a>: Extension: Missing semicolon for constructor args</li>
