--- a/junithelper-eclipse-plugin/releasenotes.html
+++ b/junithelper-eclipse-plugin/releasenotes.html
@@ -8,6 +8,10 @@
 
 <h2>JUnit Helper Eclipse plugin Release Notes</h2>
 
+<h3>JUnit Helper 1.9.2</h3>
+Date : 29 December 2011<br/>
+<li>Fixed <a href="http://code.google.com/p/junithelper/issues/detail?id=72&can=1">Issue 72</a>: Eclise plugin: Classes in the same directory are not recognized only via Eclipse plugin</li>
+
 <h3>JUnit Helper 1.9.1</h3>
 Date : 5 November 2011<br/>
 <li>Fixed <a href="http://code.google.com/p/junithelper/issues/detail?id=71&can=1">Issue 71</a>: Eclise plugin: Popup menue in navigator and Java editor does not work</li>
